Bug 91070 - libinput 0.18.0 ignores cursor movement on click
Summary: libinput 0.18.0 ignores cursor movement on click
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-23 11:35 UTC by adam777
Modified: 2015-06-25 02:50 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
evemu-record (24.27 KB, text/plain)
2015-06-24 11:20 UTC, adam777
Details

Description adam777 2015-06-23 11:35:55 UTC
Steps to reproduce:
- Move a finger continuously over the touchpad.
- While moving the finger, click the left or right button area.

Expected behavior (0.17.0):
After the click is triggered, the cursor movement continues.

Current behavior (0.18.0):
After the click is triggered, the cursor movement is ignored and will resume only if the finger is lifted from the touchpad and placed again.

Arch linux x64, fully updated against [testing].
Dell inspiron 7348, SynPS/2 Synaptics TouchPad.
Comment 1 Peter Hutterer 2015-06-24 09:51:10 UTC
please record this with evemu-record and attach it here, I can't seem to reproduce this. Thanks
Comment 2 adam777 2015-06-24 11:20:28 UTC
Created attachment 116689 [details]
evemu-record

Move finger over touchpad - cursor moves.
Keep finger on touch pad and click with another finger.
move first finger over touchpad - cursor doesn't move.
Comment 3 adam777 2015-06-24 11:20:43 UTC
log attached
Comment 4 Peter Hutterer 2015-06-25 02:50:15 UTC
commit 56264a6ff624afc39935a744d5fd40f0ae969a52
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Thu Jun 25 12:20:04 2015 +1000

    touchpad: fix stuck finger after a click


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.